[tool.poetry]
name = "toml-file-update"
version = "0.1.0"
description = ""
authors = ["Ryan Ashcraft <ryan.ashcraft@codifyiq.com>"]
readme = "README.md"
packages = [{include = "toml_file_update", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.monorepo.dependencies]


[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"

[tool.poetry.dev-dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
